Fixed spacing next to icons

--- a/client/src/component/ModalComponent.css
+++ b/client/src/component/ModalComponent.css
@@ -144,3 +144,7 @@
   padding: 8px 150px 10px 35px;
   color: #353434;
 }
+
+.images {
+  margin-right: 20px;
+}
